--- a/ButtonsAutoLayout_2Views/ButtonsAutoLayout/Base.lproj/Main.storyboard
+++ b/ButtonsAutoLayout_2Views/ButtonsAutoLayout/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SjT-pI-dYl">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hey-gx-mMm" userLabel="OrangeBtn">
-                                <rect key="frame" x="20" y="20" width="275" height="400"/>
+                                <rect key="frame" x="20" y="64" width="275" height="356"/>
                                 <color key="backgroundColor" red="1" green="0.68625913829248197" blue="0.26928978592443198" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Orange"/>
                                 <connections>
@@ -27,7 +27,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ynn-9P-jwC" userLabel="BlueBtn">
-                                <rect key="frame" x="305" y="20" width="275" height="400"/>
+                                <rect key="frame" x="305" y="64" width="275" height="356"/>
                                 <color key="backgroundColor" red="0.437313407221252" green="0.89954287177680048" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Blue"/>
                                 <connections>
@@ -61,13 +61,14 @@
                             <constraint firstItem="Ynn-9P-jwC" firstAttribute="leading" secondItem="Hey-gx-mMm" secondAttribute="trailing" constant="10" id="tiz-8X-wyn"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="FhC-D3-OBE"/>
                     <connections>
                         <segue destination="QDV-2h-qwf" kind="show" identifier="progSegue" id="2vQ-qU-IHR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="213" y="436"/>
+            <point key="canvasLocation" x="1025" y="436"/>
         </scene>
         <!--OrangeScene-->
         <scene sceneID="FT3-mq-VxB">
@@ -109,7 +110,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CwI-Al-m07" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1145" y="436"/>
+            <point key="canvasLocation" x="1957" y="436"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yYv-TB-q3P">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SjT-pI-dYl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KaH-Lm-JTf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="oK4-Gy-Lrf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AOv-zk-daF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="213" y="436"/>
         </scene>
     </scenes>
 </document>
